Korrektur des Ergebnisteils mit verbesserten Bildbeschreibungen.

--- a/Einfuehrung.tex
+++ b/Einfuehrung.tex
@@ -198,7 +198,7 @@ Der V-Slope und der Vergleich der \acs{VE} zur \acs{VCO2} werden häufig als all
 %\clearpage
 \section{Problemstellung \& Ziele der Arbeit}
 
-Die Bestimmung der ventilatorischen Schwellen in der Leistungsdiagnostik ist ein modernes und häufig empfohlenes Verfahren zur Trainingsplanung und daher für cardioscan ein sinnvolles Instrument. Momentan nutzt die Firma einen Algorithmus, der vom RQ abhängig ist. VT2 wird dort gesetzt, wo dieser den Wert eins erreicht. Begründet wird diese Verfahrensweise dadurch, dass Fettsäuren in körperlicher Ruhe den oxidativen Hauptenergielieferanten verkörpern, der RQ dann normalerweise bei ca. 0,7 liegt und mit zunehmender Belastung langsam ansteigt. Diefenthaeler et al.~\cite{Diefenthaeler.2017} und Zagatto et al.~\cite{Zagatto.2012} konnten dies in ihren Studien untermauern. Leti et al. hingegen machten die Beobachtung, dass die Belastungsintensität bei RQ = 1 deutlich von der objektiv mit VT2 assoziierten Intensität abwich~\cite{Leti.2012}. Dem sind besonders die Einflussfaktoren Trainingszustand sowie Belastungsart und -protokoll zugrundeliegend. Die Problematik wird zusätzlich durch den Fakt verstärkt, dass der Respiratorische Quotient (\acs{RQ}) auf unterschiedliche Weise, z.B. durch kohlenhydrathaltige Ernährung, akut beeinflussbar ist~\cite{ScharhagRosenberger.2010}. cardioscan arbeitet darüber hinaus mit Stufenprotokollen und nutzt hauptsächlich Fahrradergometer. Daraus können Abweichungen bei den Trainingszonen resultieren, wenn beispielsweise Laufathleten, die nicht häufig Fahrrad fahren, relativ frühzeitig muskulär ausbelastet sind, obwohl der RQ noch unterhalb von 1 liegt. Eine kardiorespiratorische Ausbelastung läge somit noch nicht vor und die VT2 wäre faktisch noch nicht erreicht~\cite{Tzvetkov.2008}. Zur Bestimmung der VT2 ist das Erreichen des Maximums jedoch unabdingbar~\cite{ScharhagRosenberger.2013}. Gemäß der Literaturempfehlungen wurden daher mehrere alternative Verfahren ausgewählt.\\
+Die Bestimmung der ventilatorischen Schwellen in der Leistungsdiagnostik ist ein modernes und häufig empfohlenes Verfahren zur Trainingsplanung und daher für cardioscan ein sinnvolles Instrument. Momentan nutzt die Firma einen Algorithmus, der vom RQ abhängig ist. VT2 wird dort gesetzt, wo dieser den Wert eins erreicht. Begründet wird diese Verfahrensweise dadurch, dass Fettsäuren in körperlicher Ruhe den oxidativen Hauptenergielieferanten verkörpern, der RQ dann normalerweise bei ca. 0,7 liegt und mit zunehmender Belastung langsam ansteigt. Diefenthaeler et al.~\cite{Diefenthaeler.2017} und Zagatto et al.~\cite{Zagatto.2012} konnten dies in ihren Studien untermauern. Leti et al. hingegen machten die Beobachtung, dass die Belastungsintensität bei RQ~=~1 deutlich von der objektiv mit VT2 assoziierten Intensität abwich~\cite{Leti.2012}. Dem sind besonders die Einflussfaktoren Trainingszustand sowie Belastungsart und -protokoll zugrundeliegend. Die Problematik wird zusätzlich durch den Fakt verstärkt, dass der Respiratorische Quotient (\acs{RQ}) auf unterschiedliche Weise, z.B. durch kohlenhydrathaltige Ernährung, akut beeinflussbar ist~\cite{ScharhagRosenberger.2010}. cardioscan arbeitet darüber hinaus mit Stufenprotokollen und nutzt hauptsächlich Fahrradergometer. Daraus können Abweichungen bei den Trainingszonen resultieren, wenn beispielsweise Laufathleten, die nicht häufig Fahrrad fahren, relativ frühzeitig muskulär ausbelastet sind, obwohl der RQ noch unterhalb von 1 liegt. Eine kardiorespiratorische Ausbelastung läge somit noch nicht vor und die VT2 wäre faktisch noch nicht erreicht~\cite{Tzvetkov.2008}. Zur Bestimmung der VT2 ist das Erreichen des Maximums jedoch unabdingbar~\cite{ScharhagRosenberger.2013}. Gemäß der Literaturempfehlungen wurden daher mehrere alternative Verfahren ausgewählt.\\
 Zur Bestimmung der VT1:
 %
 \begin{itemize}
@@ -213,7 +213,7 @@ Zur Bestimmung der VT2:
 	\item Äquivalent-Methode und Anstieg des \acs{EQCO2}
 \end{itemize}
 %
-Als Referenz für die VT2 wurde bei den Testmessungen die momentane Methode RQ = 1 angewandt.\\
+Als Referenz für die VT2 wurde bei den Testmessungen die momentane Methode RQ~=~1 angewandt.\\
 Im Rahmen der Arbeit werden mithilfe der Messungen folgende Fragen behandelt:
 %
 \begin{enumerate}
