Einige formale Änderungen. Optimierter Resultate-, Auswertungs- und Diskussionsteil. Aktualisiertes Literaturverzeichnis. Optimierungen am Header bezüglich der Absätze.

--- a/Acronym.tex
+++ b/Acronym.tex
@@ -54,5 +54,7 @@
 	\acro{GA1}{Extensives Grundlagentraining}
 	\acro{GA2}{Intensives Grundlagentraining}
 	\acro{EW}{Entwicklungsbereich}
+	\acro{FEV1}{exspiratorische Einsekundenkapazität (forced expiratory volume in 1 second)}
+	\acro{FVC}{forcierte Vitalkapazität}
 	
 \end{acronym}
