--- a/BA.tex
+++ b/BA.tex
@@ -13,7 +13,7 @@ headsepline,
 titlepage=true,
 %chapterprefix=on,
 %appendixprefix=on,
-headings=small,
+headings=normal,
 bibliography=totoc,
 listof=totoc,
 listof=nochaptergap,
