--- a/Referenzen.bib
+++ b/Referenzen.bib
@@ -38,6 +38,14 @@ publisher = {Springer Medizin Verlag}
  pages = {60 ff., 83--89, 133 ff., 140--146, 331 ff., 501 ff.}
 }
 
+@book{Larsen.2017,
+author = {Larsen, R. and Ziegenfuß, T. and Mathes, A.},
+year = {2017},
+title = {Beatmung: Indikationen - Techniken - Krankheitsbilder},
+address = {Heidelberg},
+publisher = {Springer Verlag}
+}
+
 @article{Leti.2012,
  author = {Leti, T. and Mendelson, M. and Laplaud, D. and Flore, P.},
  year = {2012},
@@ -245,16 +253,6 @@ title = {Die muskuläre Energiebereitstellung im Sport},
 year = {1995},
 url = {http://www.dr-moosburger.at/pub/pub023.pdf},
 note = {zuletzt abgerufen am 02.04.2018}
-}
-
-@misc{Biochemie1,
-author = {Brandenburger, T. and Königshoff, M.},
-title = {Endspurt Vorklinik: Biochemie 1},
-year = {2013},
-publisher = {Georg Thieme Verlag},
-address = {Stuttgart},
-url= {https://viamedici.thieme.de/lernmodule/biochemie/glykolyse+%C3%BCbersicht+reaktionen+und+energiebilanz},
-note = {zuletzt abgerufen am 15.05.2018}
 }
 
 
