--- a/header.tex
+++ b/header.tex
@@ -53,7 +53,7 @@ maxnames=3
 
 \raggedbottom
 \setlength{\parindent}{0em}
-\setlength{\parskip}{2ex}
+\setlength{\parskip}{1ex}
 
 \newcommand{\mydate}{\today}
 
@@ -75,7 +75,7 @@ maxnames=3
 \usepackage{wasysym}
 
 \usepackage{relsize}																		% Schriftgrüßen nicht absolut, sondern relativ angeben
-\usepackage{setspace}																		% 1,5 facher Zeilenabstand
+\usepackage{setspace}																		% Zeilenabstand
 
 \usepackage[margin=10pt,font=small,labelfont=bf,labelsep=endash,format=hang,figurename={Abb.}, tablename={Tab.}
 ]{caption}																					% für schönere Unterschriften bei Abbildungen und Tabellen
